prevents scroll button from sliding behind comp

--- a/src/components/scrollButton/scrollButton.scss
+++ b/src/components/scrollButton/scrollButton.scss
@@ -2,6 +2,7 @@
     position: fixed;
     bottom: 2em;
     left: 2em;
+    z-index: 1;
 }
 
 .scroll__button {
